--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "vk_test_test",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
     "@vkontakte/icons": "^2.113.0",
     "@vkontakte/vk-bridge": "^2.14.1",
     "@vkontakte/vk-mini-apps-router": "^1.4.3",
     "@vkontakte/vk-miniapps-deploy": "^0.1.7",
     "@vkontakte/vk-tunnel": "^0.2.0",
     "@vkontakte/vkui": "^6.0.2",
-    "axios": "^1.6.8",
     "cross-env": "^7.0.3",
     "mobx": "^6.12.3",
     "mobx-react": "^9.1.1",
@@ -21,7 +20,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "cross-env PORT=3000 HTTPS=true react-scripts start",
@@ -29,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "tunnel": "vk-tunnel --insecure=1 --http-protocol=https --ws-protocol=wss --host=0.0.0.0 --port=3000 --timeout=5000",
-    "deploy":"vk-miniapps-deploy"
+    "deploy": "vk-miniapps-deploy"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^5.4.5"
   }
 }
