--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@vkontakte/vk-tunnel": "^0.2.0",
     "@vkontakte/vkui": "^6.0.2",
     "cross-env": "^7.0.3",
+    "emoji-mart": "^5.6.0",
     "mobx": "^6.12.3",
     "mobx-react": "^9.1.1",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-emoji-render": "^2.0.1",
     "react-html-parser": "^2.0.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
